Updated to text box color from white to black to fix visability.
Chat Container had a issue where the javascript code that was appending the text was not visible unless highlighted due to text color this fixes it by making the text black.

--- a/client/style.css
+++ b/client/style.css
@@ -225,6 +225,7 @@ ul {
   flex-direction: column;
   gap: 1rem;
   overflow: scroll;
+  color: var(--text-color);
 }
 
 /* Footer styles */
